--- a/parity-crypto/Cargo.toml
+++ b/parity-crypto/Cargo.toml
@@ -14,9 +14,11 @@ harness = false
 required-features = ["publickey"]
 
 [dependencies]
-aes = "0.3.2"
-aes-ctr = "0.3.0"
-block-modes = "0.3.3"
+aes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="6c5232fce16396363cdecf71dd5595be4c2ed426" }
+aes-ctr = { git = "https://github.com/fortelabsinc/block-ciphers", rev="66c3681d7bdd5fa74dafae1a3ac80ed5ba650559" }
+block-modes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="3a7f1b6133cf5764543e72698c93adb586ca5771" }
+
+
 digest = "0.8"
 ethereum-types = { version = "0.9.0", optional = true, path = "../ethereum-types" }
 hmac = "0.7"
