--- a/parity-crypto/Cargo.toml
+++ b/parity-crypto/Cargo.toml
@@ -21,13 +21,13 @@ block-modes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="3a7f
 
 digest = "0.8"
 ethereum-types = { version = "0.9.0", optional = true, path = "../ethereum-types" }
-hmac = "0.7"
+hmac = { git = "https://github.com/fortelabsinc/MACs", rev="5d5702ab28f1882db6803cc4f5d91cd442f07267" }
 lazy_static = { version = "1.0", optional = true }
-pbkdf2 = "0.3.0"
+pbkdf2 = { git = "https://github.com/fortelabsinc/password-hashes", rev="1109c9810c492cb15a6da31a6a5a50de026d759a" }
 rand = "0.7.2"
 ripemd160 = "0.8.0"
 rustc-hex = { version = "2.1.0", default-features = false, optional = true }
-scrypt = { version = "0.2.0", default-features = false }
+scrypt = { git = "https://github.com/fortelabsinc/password-hashes", rev="81017191a1a0b9fd8be2e38eae9b5dfeef3c4827" , default-features = false }
 secp256k1 = { version = "0.17.2", optional = true, features = ["recovery", "rand-std"] }
 sha2 = "0.8.0"
 subtle = "2.2.1"
